fix bug #33734 and related (Something strange with COM Object)  - caused by fix in com_handlers.c rev 1.22.2.5

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@225682 c90b9560-bf6c-de11-be94-00142212c4b1